# TradingEngine

./: CMakeLists.txt  README.md
config/: config.json
data/: ticks.csv
include/: Bar.hpp  ConfigHandler.hpp  EngineCore.hpp  Event.hpp  ExecutionReport.hpp  IBKRConverters.hpp  IBKRExecutionHandler.hpp  IBKRGatewayClient.hpp  IBKRMarketDataHandler.hpp  I_ExecutionHandler.hpp  I_MarketDataHandler.hpp  LogHandler.hpp  MockMarketDataHandler.hpp  Order.hpp  OrderManager.hpp  ScriptingInterface.hpp  ThreadSafeQueue.hpp  Tick.hpp  TimeUtils.hpp  types.hpp
listener_test/: HistoricalData.cpp  historical_data  strategy_client  strategy_client.cpp
src/: ConfigHandler.cpp  EngineCore.cpp  IBKRConverters.hpp  IBKRExecutionHandler.cpp  IBKRGatewayClient.cpp  IBKRMarketDataHandler.cpp  MockMarketDataHandler.cpp  OrderManager.cpp  ScriptingInterface.cpp  main.cpp
tests/: test_ordermanager.cpp
